@@ -1739,31 +1739,30 @@ void SPVM_OPCODE_BUILDER_build_opcode_array(SPVM_COMPILER* compiler) {
                         SPVM_OPCODE_ARRAY_push_opcode(compiler, opcode_array, &opcode);
                       }
                       else if (op_assign_src->id == SPVM_OP_C_ID_BIT_AND) {
-
-                        
-
                         SPVM_OPCODE opcode;
                         memset(&opcode, 0, sizeof(SPVM_OPCODE));
                         
                         assert(SPVM_TYPE_is_numeric_type(compiler, type_dist->basic_type->id, type_dist->dimension, type_dist->flag));
                         int32_t var_id_out;
                         int32_t var_id_in1;
+                        int32_t var_id_in2;
                         switch (type_dist->basic_type->id) {
                           case SPVM_BASIC_TYPE_C_ID_INT:
                             SPVM_OPCODE_BUILDER_set_opcode_id(compiler, &opcode, SPVM_OPCODE_C_ID_BIT_AND_INT);
                             var_id_out = SPVM_OP_get_int_var_id(compiler, op_assign_dist);
                             var_id_in1 = SPVM_OP_get_int_var_id(compiler, op_assign_src->first);
+                            var_id_in2 = SPVM_OP_get_int_var_id(compiler, op_assign_src->last);
                             break;
                           case SPVM_BASIC_TYPE_C_ID_LONG:
                             SPVM_OPCODE_BUILDER_set_opcode_id(compiler, &opcode, SPVM_OPCODE_C_ID_BIT_AND_LONG);
                             var_id_out = SPVM_OP_get_long_var_id(compiler, op_assign_dist);
                             var_id_in1 = SPVM_OP_get_long_var_id(compiler, op_assign_src->first);
+                            var_id_in2 = SPVM_OP_get_long_var_id(compiler, op_assign_src->last);
                             break;
                           default:
                             assert(0);
                         }
 
-                        int32_t var_id_in2 = SPVM_OP_get_int_var_id(compiler, op_assign_src->last);
                         
                         opcode.operand0 = var_id_out;
                         opcode.operand1 = var_id_in1;
